2017-09-09  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r221801.

        This change introduced a webkitpy test failure.

        Reverted changeset:

        "bisect-builds doesn't work due to missing requests module"
        https://bugs.webkit.org/show_bug.cgi?id=175709
        http://trac.webkit.org/changeset/221801

2017-09-09  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r221776.

        This change caused wsl-tests.yaml/Test.js to time out on Debug
        JSC bots.

        Reverted changeset:

        "Add "if" statements to WSL"
        https://bugs.webkit.org/show_bug.cgi?id=176294
        http://trac.webkit.org/changeset/221776

2017-09-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        MiniBrowser closes tab instead of window on close signal
        https://bugs.webkit.org/show_bug.cgi?id=176587

        Reviewed by Carlos Garcia Campos.

        This has been broken since we added support for multiple tabs. We need to run try_close for
        every open tab, not just the current one. If there are no onbeforeonload handlers then all
        tabs will close; if there are some, then they'll be respected, but the remaining tabs will
        be closed.

        Note that we cannot simply iterate through the tabs of the GtkNotebook, as we'd be deleting
        tabs as we go, so save all the tabs into a separate list and then try to close each in turn.

        * MiniBrowser/gtk/BrowserWindow.c:
        (browserWindowTryClose):
        (browserWindowDeleteEvent):

2017-09-09  Zan Dobersek  <zdobersek@igalia.com>

        Unreviewed WPE build fix.

        * TestWebKitAPI/PlatformWPE.cmake:
        Link WebCore archives into the TestWebCore binary as a group.

2017-09-08  Lucas Forschler  <lforschler@apple.com>

        bisect-builds doesn't work due to missing requests module
        https://bugs.webkit.org/show_bug.cgi?id=175709
        
        Reviewed by Ryosuke Niwa.
